Fixed test failures